# altctrl

./: .gitignore  Cargo.toml  LICENSE  README.md  gnome-terminal
.github/workflows/: rust.yml
src/: chungo.rs  event.rs  fatkhiyev.rs  garfanzo.rs  i2c.rs  lib.rs  main.rs  protocol.rs  serial.rs  shared.rs  types.rs
src/gui/: flashtext.rs  gui_lib.rs  mod.rs  types.rs  usr_ctrl.rs
src/i2c/: button.rs  constants.rs  mod.rs  port.rs  types.rs
src/serial/: mod.rs  types.rs
